Add JavaScript documentation

--- a/form/iconpicker.html
+++ b/form/iconpicker.html
@@ -14,7 +14,7 @@ npm-version: 0.1.3
 {% endcapture %}
 
 {% capture iconpicker_js %}
-<script type="text/javascript" src="./js/iconPicker.js"></script>
+<script type="text/javascript" src="/node_modules/bulma-extensions/bulma-iconpicker/dist/bulma-iconpicker.min.js"></script>
 {% endcapture %}
 
 {% capture iconpicker_js_customize %}
