--- a/form/tagsinput.html
+++ b/form/tagsinput.html
@@ -14,7 +14,7 @@ npm-version: 0.2.0
 {% endcapture %}
 
 {% capture tagsinput_js %}
-<script type="text/javascript" src="./tagsinput.js"></script>
+<script type="text/javascript" src="/node_modules/bulma-extensions/bulma-tagsinput/dist/bulma-tagsinput.min.js"></script>
 {% endcapture %}
 
 <section class="section">
