add position modifiers

--- a/elements/badge.html
+++ b/elements/badge.html
@@ -199,6 +199,7 @@ variables:
     <h4 class="subtitle">You can display an outlined badge by using <code>.is-badge-outlined</code> modifier.</h4>
     {% include snippet.html content=badge_outlined_example size="one-half" more=true %}
 
+    <h4 class="subtitle">You can change the badge position using one of the following modifier: <code>.is-badge-left</code> <code>.is-badge-bottom</code>  <code>.is-badge-bottom-left</code> .</h4>
     {% include variables.html %}
   </div>
 </section>
