content fixes for grammar and spelling across documentation pages

--- a/elements/badge.html
+++ b/elements/badge.html
@@ -154,7 +154,7 @@ variables:
       <div class="column">
         <h1 class="title">Badge</h1>
         <h2 class="subtitle">
-          Display a <strong>badge</strong> element in front of Bulma's element in different colors.<br />It's useful, for example, to display a number of items like notifications or mails.
+          Display a <strong>badge</strong> element in front of another Bulma element with different colors.<br />
         </h2>
       </div>
       <div class="column is-narrow">
@@ -196,10 +196,10 @@ variables:
     {% include snippet.html content=badge_sizes_example size="one-half" more=true %}
 
     {% include anchor.html name="Styles" %}
-    <h4 class="subtitle">You can display an outlined badge by using <code>.is-badge-outlined</code> modifier.</h4>
+    <h4 class="subtitle">You can display an outlined badge by using the <code>.is-badge-outlined</code> modifier.</h4>
     {% include snippet.html content=badge_outlined_example size="one-half" more=true %}
 
-    <h4 class="subtitle">You can change the badge position using one of the following modifier: <code>.is-badge-left</code> <code>.is-badge-bottom</code>  <code>.is-badge-bottom-left</code> .</h4>
+    <h4 class="subtitle">You can change the badge position using one of the following modifiers: <code>.is-badge-left</code> <code>.is-badge-bottom</code>  <code>.is-badge-bottom-left</code> .</h4>
     {% include variables.html %}
   </div>
 </section>
