--- a/form/iconpicker.html
+++ b/form/iconpicker.html
@@ -74,7 +74,7 @@ let iconPickerOptions = {
     {% include snippet.html content=iconpicker_example size="one-third" %}
 
     <div class="notification is-info">
-      <p>You don't have to write any JavaScript code. Just add <code>data-action="iconPicker"</code> attribute to the input element and see the magic happens.</p>
+      <p>You don't have to write any JavaScript code. Just add the <code>data-action="iconPicker"</code> attribute to the input element and see the magic happen.</p>
     </DIV>
 
     <hr>
@@ -87,7 +87,7 @@ let iconPickerOptions = {
 
           {% highlight javascript %}{{ iconpicker_js }}{% endhighlight %}
 
-          <p>you can customize icon sets by overwriting <code>iconPickerOptions</code> variable like following:</p>
+          <p>Customize icon sets by overwriting the <code>iconPickerOptions</code> variable as in the following:</p>
           {% highlight javascript %}{{ iconpicker_js_customize }}{% endhighlight %}
         </div>
       </div>
