--- a/form/switch.html
+++ b/form/switch.html
@@ -252,7 +252,7 @@ variables:
       <div class="column">
         <h1 class="title">Switch</h1>
         <h2 class="subtitle">
-          Display classic <strong>checkbox</strong> as a switch button, in different colors, sizes, and states
+          Display the classic <strong>checkbox</strong> as a switch button with different colors, sizes, and states
         </h2>
       </div>
       <div class="column is-narrow">
@@ -293,12 +293,12 @@ variables:
     {% include snippet.html content=switch_rtl_example size="one-third" more=true %}
 
     <div class="has-text-centered has-text-danegr">
-      <p>Don't forget to set <code>id</code> attribute on input and <code>for</code> attribute on label with the same value to get it work. This will link the label to the checkbox and then handle the click.</p>
+      <p>Don't forget to set the <code>id</code> attribute on input and the <code>for</code> attribute on label with the same value to get it work. This will link the label to the checkbox and then handle the click.</p>
     </div>
     <br />
 
     <div class="notification is-warning has-text-centered">
-      <p>Please note that due to <strong>CSS limitation</strong> the structure of the checkbox is different of the one provided as example in Bulma's documentation.<br /><i>(Input is not wrapped by the label)</i></p>
+      <p>Please note that due to <strong>CSS limitations</strong> the structure of the checkbox is different than the one provided as example in Bulma's documentation.<br /><i>(Input is not wrapped by the label)</i></p>
     </div>
 
     {% include anchor.html name="Colors" %}
