--- a/elements/pageloader.html
+++ b/elements/pageloader.html
@@ -29,7 +29,7 @@ variables:
       <div class="column">
         <h1 class="title">Page-loader</h1>
         <h2 class="subtitle">
-          Display a <strong>page-loader</strong> to inform user that content is loading, in different colors.
+          Display a <strong>page-loader</strong> to inform users that content is loading, in different colors.
         </h2>
       </div>
       <div class="column is-narrow">
