--- a/form/checkradio.html
+++ b/form/checkradio.html
@@ -402,7 +402,7 @@ variables:
       <div class="column">
         <h1 class="title">Checkradio</h1>
         <h2 class="subtitle">
-          Make classic <strong>checkbox</strong> and <strong>radio</strong> more sexy in different colors, sizes, and states
+          Make classic <strong>checkbox</strong> and <strong>radio</strong> sexier with different colors, sizes, and states
         </h2>
       </div>
       <div class="column is-narrow">
@@ -443,12 +443,12 @@ variables:
     {% include snippet.html content=checkradio_rtl_example size="one-third" more=true %}
 
     <div class="has-text-centered has-text-danegr">
-      <p>Don't forget to set <code>id</code> attribute on input and <code>for</code> attribute on label with the same value to get it work. This will link the label to the checkbox and then handle the click.</p>
+      <p>Don't forget to set the <code>id</code> attribute on input and the <code>for</code> attribute on label with the same value to get it work. This will link the label to the checkbox and then handle the click.</p>
     </div>
     <br />
 
     <div class="notification is-warning has-text-centered">
-      <p>Please note that due to <strong>CSS limitation</strong> the structure of the checkbox is different of the one provided as example in Bulma's documentation.<br /><i>(Input is not wrapped by the label)</i></p>
+      <p>Please note that due to <strong>CSS limitations</strong>, the structure of the checkbox is different than the one provided as an example in Bulma's documentation.<br /><i>(Input is not wrapped by the label)</i></p>
     </div>
 
     {% include anchor.html name="Colors" %}
@@ -463,23 +463,23 @@ variables:
 
     <h3 class="title">Styles</h3>
     <h4 class="subtitle">Circle</h4>
-    <p>You can add <code>is-circle</code> modifier to the input to get a rounded checkbox</p>
+    <p>You can add the <code>is-circle</code> modifier to the input to get a rounded checkbox</p>
     <br />
     {% include snippet.html content=checkradio_colors_circle_example size="one-third" more=true %}
 
     <h4 class="subtitle">Block</h4>
-    <p>You can add <code>is-block</code> modifier to the input to get a full colored checkbox</p>
+    <p>You can add the <code>is-block</code> modifier to the input to get a full colored checkbox</p>
     <br />
     {% include snippet.html content=checkradio_block_colors_example size="one-third" more=true %}
 
     <h4 class="subtitle">No border</h4>
-    <p>Adding <code>has-no-border</code> modifier to the input will remove the checkbox border</p>
+    <p>Adding the <code>has-no-border</code> modifier to the input will remove the checkbox border</p>
     <br />
     {% include snippet.html content=checkbox_noborder_example size="one-third" more=true %}
     {% include snippet.html content=radio_noborder_example size="one-third" more=true %}
 
     <h4 class="subtitle">Background colored</h4>
-    <p>You can add <code>has-background-color</code> modifier to the input to get the checkbox background color impacted</p>
+    <p>You can add the <code>has-background-color</code> modifier to the input to get the checkbox background color impacted</p>
     <br />
     {% include snippet.html content=checkbox_backgroundColor_example size="one-third" more=true %}
     {% include snippet.html content=radio_backgroundColor_example size="one-third" more=true %}
