--- a/form/switch.html
+++ b/form/switch.html
@@ -3,7 +3,7 @@ title: Switch
 layout: documentation
 doc-tab: form
 doc-subtab: switch
-npm-version: 0.1.2
+npm-version: 0.1.3
 variables:
 - name: $switch-background
   value: $grey-light
@@ -19,6 +19,8 @@ variables:
   value: 0.25rem
 - name: $switch-paddle-transition
   value: all 0.25s ease-out
+- name: $switch-focus
+  value: 1px dotted $grey-light
 ---
 
 {% include subnav-form.html %}
