Tooltip background opacity variable is added.

--- a/elements/tooltip.html
+++ b/elements/tooltip.html
@@ -7,6 +7,8 @@ npm-version: 0.1.1
 variables:
 - name: $tooltip-background-color
   value: $grey-dark
+- name: $tooltip-background-opacity
+  value: 0.9
 - name: $tooltip-max-width
   value: 24rem
 ---
