Fixed existing variable values to match source

--- a/form/slider.html
+++ b/form/slider.html
@@ -8,7 +8,7 @@ variables:
 - name: $slider-radius
   value: $radius
 - name: $slider-track-background
-  value: $grey-light
+  value: $grey-lighter
 - name: $slider-track-radius
   value: $radius
 - name: $slider-track-border
@@ -16,11 +16,11 @@ variables:
 - name: $slider-track-shadow
   value: 0px 0px 0px $grey
 - name: $slider-thumb-background
-  value: $primary
+  value: $white
 - name: $slider-thumb-radius
   value: $radius
 - name: $slider-thumb-border
-  value: 1px solid $white-ter
+  value: 1px solid $grey-light
 - name: $slider-thumb-shadow
   value: none
 - name: $slider-output-width
