--- a/form/slider.html
+++ b/form/slider.html
@@ -23,6 +23,8 @@ variables:
   value: 1px solid $grey-light
 - name: $slider-thumb-shadow
   value: none
+- name $slider-thumb-to-track-ratio
+  value: 2
 - name: $slider-output-width
   value: 3rem
 - name: $slider-output-background
