--- a/elements/badge.html
+++ b/elements/badge.html
@@ -6,7 +6,7 @@ doc-subtab: badge
 npm-version: 3.0.0
 ---
 
-{% include subnav-components.html %}
+{% include subnav-elements.html %}
 
 <section class="section">
   <div class="container">
