--- a/elements/badge.html
+++ b/elements/badge.html
@@ -12,7 +12,7 @@ npm-version: 3.0.0
   <div class="container">
     <div class="columns">
       <div class="column">
-        <h1 class="title">Calendar</h1>
+        <h1 class="title">Badge</h1>
         <h2 class="subtitle">
           Display a badge element in front of Bulma's element in different colors.
         </h2>
