--- a/form/slider.html
+++ b/form/slider.html
@@ -24,7 +24,7 @@ variables:
 - name: $slider-thumb-shadow
   value: none
 - name $slider-thumb-to-track-ratio
-  value: 2
+  value: "2"
 - name: $slider-output-width
   value: 3rem
 - name: $slider-output-background
